--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@nlpjs/core": "^4.26.1",
+    "@nlpjs/lang-en-min": "^4.26.1",
+    "@nlpjs/nlp": "^4.27.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
